--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
     </head>
 
     <body>
-        <h1>Apple Clone</h1>
+        <header>
+            <nav>
+                <ul>
+                    <li>Logo</li>
+                    <li>Store</li>
+                    <li>Mac</li>
+                    <li>iPad</li>
+                    <li>iPhone</li>
+                    <li>Watch</li>
+                    <li>Airpods</li>
+                    <li>Tv & Home</li>
+                    <li>Only on Apple</li>
+                    <li>Accessories</li>
+                    <li>Support</li>
+                    <li>Search</li>
+                    <li>Cart</li>
+                </ul>
+            </nav>
+        </header>
     </body>
 </html>
