--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         <header>
             <nav>
                 <ul>
-                    <li>Logo</li>
+                    <li>
+                        <a href="">
+                            <img src="assets/img/logo.svg" alt="Logo da Apple" />
+                        </a>
+                    </li>
                     <li>Store</li>
                     <li>Mac</li>
                     <li>iPad</li>
@@ -26,8 +30,16 @@
                     <li>Only on Apple</li>
                     <li>Accessories</li>
                     <li>Support</li>
-                    <li>Search</li>
-                    <li>Cart</li>
+                    <li>
+                        <a href=""></a>
+                            <img src="assets/img/search-icon.svg" alt="Ícone de busca" />
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""></a>
+                            <img src="assets/img/cart-icon.svg" alt="Ícone de carrinho de compras" />
+                        </a>
+                    </li>
                 </ul>
             </nav>
         </header>
