new section added

--- a/index.html
+++ b/index.html
@@ -46,5 +46,13 @@
                 </ul>
             </nav>
         </header>
+
+        <main>
+            <section>
+                <h1>Apple Shopping Event</h1>
+                <h2>From November 25 to 28, get an Apple Gift Card when you buy an eligible product.</h2>
+                <a href="#">Get an early look</a>
+            </section>
+        </main>
     </body>
 </html>
