--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <h1>Apple Shopping Event</h1>
                 <h2>From November 25 to 28, get an Apple Gift Card when you buy an eligible product.</h2>
                 <a href="#">Get an early look</a>
+                <img src="assets/img/shopping-event.png" alt="" />
             </section>
         </main>
     </body>
