--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
                     </li>
                 </ul>
             </nav>
-        </header>
 
-        <main>
-            <section>
-                <h1>Apple Shopping Event</h1>
-                <h2>From November 25 to 28, get an Apple Gift Card when you buy an eligible product.</h2>
-                <a href="#">Get an early look</a>
-                <img src="assets/img/shopping-event.png" alt="" />
-            </section>
-        </main>
+            <main>
+                <section>
+                    <h1>Apple Shopping Event</h1>
+                    <h2>From November 25 to 28, get an Apple Gift </br> Card when you buy an eligible product.</h2>
+                    <a href="#">Get an early look</a>
+                    <img src="assets/img/shopping-event.png" alt="" />
+                </section>
+            </main>
+        </header>
     </body>
 </html>
