update header styles

--- a/index.html
+++ b/index.html
@@ -48,9 +48,12 @@
 
             <main>
                 <section>
-                    <h1>Apple Shopping Event</h1>
-                    <h2>From November 25 to 28, get an Apple Gift </br> Card when you buy an eligible product.</h2>
-                    <a href="#">Get an early look</a>
+                    <div class="text-wrapper">
+                        <h1>Apple Shopping Event</h1>
+                        <h2>From November 25 to 28, get an Apple Gift </br> Card when you buy an eligible product.</h2>
+                        <a href="#">Get an early look</a>
+                    </div>
+                    
                     <img src="assets/img/shopping-event.png" alt="" />
                 </section>
             </main>
