just a little adjust

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <section>
                     <div class="text-wrapper">
                         <h1>Apple Shopping Event</h1>
-                        <h2>From November 25 to 28, get an Apple Gift </br> Card when you buy an eligible product.</h2>
+                        <h2>From November 25 to 28, get an Apple Gift </br> Card when you buy an eligible product. <sub>1</sub></h2>
                         <a href="#">Get an early look</a>
                     </div>
                     
