new section to be added

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                     
                     <img src="assets/img/shopping-event.png" alt="" />
                 </section>
+
+                <section class="spirited">
+                    <!-- soon -->
+                </section>
             </main>
         </header>
     </body>
