--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </nav>
 
             <main>
-                <section>
+                <section class="main-section">
                     <div class="text-wrapper">
                         <h1>Apple Shopping Event</h1>
                         <h2>From November 25 to 28, get an Apple Gift </br> Card when you buy an eligible product. <sub>1</sub></h2>
@@ -57,7 +57,7 @@
                     <img src="assets/img/shopping-event.png" alt="" />
                 </section>
 
-                <section class="spirited">
+                <section class="spirited-section">
                     <!-- soon -->
                 </section>
             </main>
