content added to spirited section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,17 @@
                 </section>
 
                 <section class="spirited-section">
-                    <!-- soon -->
+                    <div>
+                        <p>Will Ferrell</p>
+                        <p>Ryan Reynolds</p>
+                    </div>
+
+                    <img src="assets/img/spirited-background.png" alt="Spirited Background" />
+
+                    <div>
+                        <p>A new musical comedy based on a holiday classic.</p>
+                        <span>Now streaming</span>
+                    </div>
                 </section>
             </main>
         </header>
