--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a href="#">Get an early look</a>
                     </div>
                     
-                    <img src="assets/img/shopping-event.png" alt="" />
+                    <img src="assets/img/shopping-event.png" alt="Apple products" />
                 </section>
 
                 <section class="spirited-section">
