new section to be added

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                     <span>Now streaming</span>
                 </div>
             </section>
+
+            <section class="iphone-section">
+                <!-- soon -->
+            </section>
         </main>
     </body>
 </html>
