update iphone section styles

--- a/index.html
+++ b/index.html
@@ -73,7 +73,15 @@
             </section>
 
             <section class="iphone-section">
-                <!-- soon -->
+                <div class="text-wrapper">
+                    <h2>iPhone 14</h2>
+                    <p>Big and Bigger.</p>
+
+                    <div class="link-wrapper">
+                        <a href="#">Learn more</a>
+                        <a href="#">Buy</a>
+                    </div>
+                </div>
             </section>
         </main>
     </body>
