using iphone image

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
                         <a href="#">Buy</a>
                     </div>
                 </div>
+
+                <img src="assets/img/iphones.png" alt="iPhone 14 and iPhone 14 Pro" />
             </section>
         </main>
     </body>
